--- a/public/index.css
+++ b/public/index.css
@@ -1,4 +1,5 @@
 @import url(../src/components/CategoryBar/CategoryBar.css);
+@import url(../src/components/Header/Header.css);
 
 body {
     box-sizing: border-box;
