feat: 롤링바 일부 구현(데이터 가져오기 & 애니메이션 구현 전)

--- a/public/index.css
+++ b/public/index.css
@@ -1,5 +1,7 @@
 @import url(../src/components/CategoryBar/CategoryBar.css);
 @import url(../src/components/Header/Header.css);
+@import url(../src/components/RollingBar/RollingBar.css);
+@import url(../src/components/RollingBar/CreateRollingBar.css);
 
 body {
     box-sizing: border-box;
