--- a/public/index.css
+++ b/public/index.css
@@ -3,6 +3,7 @@
 @import url(../src/components/MediaTab/MediaTab.css);
 @import url(../src/components/RollingBar/RollingBar.css);
 @import url(../src/components/RollingBar/CreateRollingBar.css);
+@import url(../src/assets/fonts/pretendardVariable.css);
 
 body {
     box-sizing: border-box;
@@ -10,6 +11,16 @@ body {
     width: 1280px;
     height: auto;
     margin: 0;
+
+    font-family: 'Pretendard Variable';
+}
+
+@font-face {
+	font-family: 'Pretendard Variable';
+	font-weight: 45 920;
+	font-style: normal;
+	font-display: auto;
+	src: url('../src/assets/fonts/PretendardVariable.ttf')
 }
 
 #header {
