--- a/src/components/MediaTab/MediaTab.css
+++ b/src/components/MediaTab/MediaTab.css
@@ -16,6 +16,7 @@
     font-style: normal;
     font-weight: 500;
     line-height: 22px;
+    cursor: pointer;
 }
 
 .selectedTab {
@@ -29,4 +30,8 @@
     justify-content: center;
     align-items: flex-start;
     gap: 8px;
+}
+
+.viewIcon {
+    cursor: pointer;
 }
