feat: 카테고리, 언론사 수 입력 방식 변경 및 pressNews 레이아웃

--- a/public/index.css
+++ b/public/index.css
@@ -4,6 +4,10 @@
 @import url(../src/components/RollingBar/RollingBar.css);
 @import url(../src/components/RollingBar/CreateRollingBar.css);
 @import url(../src/assets/fonts/pretendardVariable.css);
+@import url(../src/components/AllMedia/NewsList/NewsList.css);
+@import url(../src/components/AllMedia/GridView/GridView.css);
+@import url(../src/components/SubscribedMedia/NewsList/NewsList.css);
+@import url(../src/components/SubscribedMedia/GridView/GridView.css);
 
 body {
     box-sizing: border-box;
