--- a/src/components/RollingBar/CreateRollingBar.css
+++ b/src/components/RollingBar/CreateRollingBar.css
@@ -1,6 +1,7 @@
 .rollingBarWrapper {
     display: flex;
     width: 930px;
+    height: auto;
     box-sizing: border-box;
     align-items: flex-start;
     gap: 8px;
